@@ -1,3 +1,9 @@
+2012-01-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * More fixes for navigation markers when going
+          backwards in multi-level menus.
+
+
 2012-01-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Fixed navigation markers when going backwards in
